# AppxCapstoneProject

./: .gitignore  README.md  VTKrenderwindow.py  app.py  current_surgical.ui  environment.yml  load.py
Code/: VTKrenderwindow.py  main.py  triad_openvr.py
cxxTest/: CMakeLists.txt  OpenVROrientedCylinder.cxx
data/: .gitignore  readme.md
examples/: arraw.py  collision.py  controler_triger.py  ct_scene.py  htc_vive_controller_keypresses.py  test.py  test2.py
triad_openvr_master/: ct_scene.py
